# splunk-add-on-for-modinput-test

./: .appinspect.expect.yaml  .appinspect.manualcheck.yaml  .fossa.yml  .releaserc  .releaserc.yaml  CLA.md  CODE_OF_CONDUCT.md  Dockerfile-splunk-local  README-test.md  README.md  docker-compose.yml  pyproject.toml  requirements_addon_specific.txt  requirements_dev.txt  requirements_py2_dev.txt
.circleci/: config.yml
.github/signatures/version1/: cla.json
.github/workflows/: build-test-release.yml  cla.yaml  cla.yml
.reuse/: dep5
package/: app.manifest
package/README/: restmap.conf.spec
package/default/: app.conf  restmap.conf  web.conf
tests/: backend_entrypoint.sh
tests/knowledge/: conftest.py  test_addon.py
